@@ -1,6 +1,11 @@
 *********************************************************************************************
 *                                  CHANGE LOG 1.0.0 - > 1.x.x                               *
 *********************************************************************************************
+  
+  * (4/11/2011) Petr Miko
+    # 205
+    
+      CHANGED: in package ...ededb.tables added JavaDoc comments.   
 
   * (4/8/2011) Petr Miko
     # 204
